--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,10 +35,35 @@ main{
 
 .main-container{
   display: flex;
+  flex-direction: column;
+  align-items: center;
   position:relative;
   width: 90%;
   margin-top: 25px;
   margin-bottom: 25px;
   border: 1px solid black;
   border-radius: 10px;
+}
+.group-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  box-sizing: content-box;
+  margin: 10px 0px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 20px 10px;
+  cursor: pointer;
+}
+.group-container:hover{
+  background-color: rgb(65, 65, 65);
+  color: gray;
+}
+
+ul{
+  width:100%;
+}
+Link{
+  text-decoration: none;
 }
